--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@
     left: 0;
     width: 100%;
     height: 87%;
-    background-image: url('../nails.jpg'); /* Replace with your image path */
+    background-image: url('../background.heic'); /* Replace with your image path */
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
