--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,13 @@
     color: inherit;
   }
   
-  /* Container */
+  .price-note.travel {
+    background: #e3f2fd;
+    border-left: 4px solid #42a5f5;
+    color: #000;
+}
+
+/* Container */
   .container {
     width: 90%;
     max-width: 1200px;
@@ -34,7 +40,7 @@
     left: 0;
     width: 100%;
     height: 87%;
-    background-image: url('../background.heic'); /* Replace with your image path */
+    background-image: url('../Background.png'); /* Replace with your image path */
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
